--- a/resource.html
+++ b/resource.html
@@ -37,6 +37,9 @@
             
             <div class="ResourceContainer">
                 <h1>Resources</h1>
+<h2>Coming Soon</h2>
+
+
 
         </div>
     </div>
