--- a/resource.html
+++ b/resource.html
@@ -36,8 +36,7 @@
             </div>
             
             <div class="ResourceContainer">
-                <h1>Resources</h1>
-<h2>Coming Soon</h2>
+                <h1>Resources Coming Soon</h1>
 
 
 
