--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                             <button class="contactme">Contact Me</button></a>
 
 
+<a href="https://amzn.to/3exg9NK">
+                            <button class="contactme">Errorless Maths</button></a>
+
+
+
                     </div>
                 </div>
                 <div class="devpic"> <img src="gaurav photo.JPG" alt="Gaurav"></div>
