--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                             <button class="contactme">Contact Me</button></a>
 
 
-<a href="https://amzn.to/3exg9NK">
-                            <button class="contactme">Errorless Maths</button></a>
+<a href="https://amzn.to/3WFCJ8g">
+                            <button class="contactme">IB Pratice Book</button></a>
 
 
 
