--- a/index.html
+++ b/index.html
@@ -39,18 +39,14 @@
                 <div class="devinfo">
                     <div class="hello">Hello Mr/Mrs</div>
                     <div class="name">Myself Gaurav Kumar </div>
-                    <div class="moreabout">NITian, Founder Of EDUGLE, Developer(Noob)</div>
-                    <div class="about">I am from NIT Agartala First Year. I welcome you all to my website. How are You.
-                        If you want any help you can contact me</div>
+                    <div class="moreabout">Ex NITian, Founder Of EDUGLE, Learning Web Development</div>
+                    <div class="about">Former student of NIT Agartala
+Pursuing Btech in ECE from ITGGV.</div>
                     <div class="buttons">
                         <a href="https://docs.google.com/uc?export=download&id=18gGIuS2BPu7MvSUBO-sbsYw6J0N2QzGo" target="_blank">
                             <button class="downloadcv">Download CV</button></a>
                         <a href="contact.html">
-                            <button class="contactme">Contact Me</button></a>
-
-
-<a href="https://amzn.to/3WFCJ8g">
-                            <button class="contactme">IB Pratice Book</button></a>
+                            <button class="contactme">Contact </button></a>
 
 
 
@@ -91,10 +87,10 @@
 
             <div class="box">
                 <h3>Follow Me</h3>
-                <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=100026581299459" target="_blank">Facebook</a>
+                <a href="https://facebook.com/sharmag02" target="_blank">Facebook</a>
                 <a href="https://twitter.com/sharmag02off" target="_blank">Twitter</a>
-                <a href="https://instagram.com/sharmag02official" target="_blank">Instagram</a>
-                <a href="https://www.linkedin.com/in/gaurav-kumar-910bba230/" target="_blank">Linkedin</a>
+                <a href="https://instagram.com/sharmag_02" target="_blank">Instagram</a>
+                <a href="https://www.linkedin.com/in/sharmag02/" target="_blank">Linkedin</a>
                 <a href="https://telegram.me/sharmag02official" target="_blank">Telegram</a>
 
             </div>
