--- a/about.html
+++ b/about.html
@@ -43,9 +43,10 @@
                     <img src="ssbgaurav.jpg" alt="Gaurav">
                     <h3> Myself Gaurav Kumar</h3>
                     <h4>Founder Of EDUGLE</h4>
-                    <p>Currently Studying At NIT Agartala</p>
+                    <p>Currently Studying BTech in ECE from ITGGV</p>
+<p>Former student of NIT Agartala Bs-Ms Chemistry (Dropped after 1st sem)
                     <p>Birthday on the date when Dhoni started playing test cricket for India(2nd December)</p>
-                    <p>Age: 19yrs</p>
+                    <p>Age: 20yrs</p>
                     <p>Indian</p>
                     <p>I am from</p>
                     <p>State: Bihar</p>
@@ -68,7 +69,8 @@
                 <p>Passed Class 10th in 2018 with 84% Marks</p>
                 <p>Class 11th and 12th and JEE Prep From Sri Chaitanya Educational Institution,VSKP,AP</p>
                 <p>Passed Class 12th in 2020 with 85% Marks</p>
-                <p>Got NIT Agartala in 2021 (Drop year. Prep- Self Study)</p>
+                <p>Got NIT Agartala in 2021 (Drop year. Prep- Self Study).Dropped NIT Agartala after 1st semester. </p>
+<p>Currently pursuing Btech in ECE from Guru Ghasidas University 
                 <hr>
                 <div class="markscontainer">
                     <div class="classtth">
