--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Pursuing Btech in ECE from ITGGV.</div>
 
             <div class="box">
                 <h3>Contact Me</h3>
-                <p> <i class="fas fa-envelope"></i>sharmag02official@gmail.com</p>
+                <p> <i class="fas fa-envelope"></i>contact.sharmag02official@gmail.com</p>
                 <a href="https://telegram.me/sharmag02officialbot" target="_blank">Telegram Personal Chat</a>
                 
 
