--- a/contact.html
+++ b/contact.html
@@ -67,13 +67,15 @@
         <img src="ssbgaurav.jpg" alt="Gaurav">
         <h2>Gaurav Kumar</h2>
         <h3>Founder Of EDUGLE</h3>
-        <h4>Currently Studying at NITA</h4>
-        <p>Email: sharmag02official@gmail.com</p>
+<h3>Content Creator at Career Capsule </p>
+        <h4>Currently Studying at ITGGV</h4>
+        <p>Email: contact.sharmag02official@gmail.com</p>
         <p>Telegram Id: @sharmag02official</p>
         <p>Telegram Personal Chat Bot: @sharmag02officialbot</p>
-        <p>Instagram Id: @sharmag02official</p>
+        <p>Instagram Id: @sharmag_02</p>
         <p>Twitter Id: @sharmag02off</p>
         <p>Linktree Id: @sharmag02</p>
+<p>Linkedin Id: @sharmag02</p>
         </div>
         
 
@@ -109,10 +111,10 @@
 
           <div class="box">
               <h3>Follow Me</h3>
-              <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=100026581299459" target="_blank">Facebook</a>
+              <a href="https://facebook.com/sharmag02" target="_blank">Facebook</a>
               <a href="https://twitter.com/sharmag02off" target="_blank">Twitter</a>
               <a href="https://instagram.com/sharmag02official" target="_blank">Instagram</a>
-              <a href="https://www.linkedin.com/in/gaurav-kumar-910bba230/" target="_blank">Linkedin</a>
+              <a href="https://www.linkedin.com/in/sharmag02/" target="_blank">Linkedin</a>
               <a href="https://telegram.me/sharmag02official" target="_blank">Telegram</a>
 
           </div>
@@ -120,7 +122,7 @@
 
           <div class="box">
               <h3>Contact Me</h3>
-              <p> <i class="fas fa-envelope"></i>sharmag02official@gmail.com</p>
+              <p> <i class="fas fa-envelope"></i>contact.sharmag02official@gmail.com</p>
               <a href="https://telegram.me/sharmag02officialbot" target="_blank">Telegram Personal Chat</a>
 
 
