--- a/resource.html
+++ b/resource.html
@@ -71,10 +71,10 @@
 
             <div class="box">
                 <h3>Follow Me</h3>
-                <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=100026581299459" target="_blank">Facebook</a>
+                <a href="https://facebook.com/sharmag02" target="_blank">Facebook</a>
                 <a href="https://twitter.com/sharmag02off" target="_blank">Twitter</a>
-                <a href="https://instagram.com/sharmag02official" target="_blank">Instagram</a>
-                <a href="https://www.linkedin.com/in/gaurav-kumar-910bba230/" target="_blank">Linkedin</a>
+                <a href="https://instagram.com/sharmag_02" target="_blank">Instagram</a>
+                <a href="https://www.linkedin.com/in/sharmag02/" target="_blank">Linkedin</a>
                 <a href="https://telegram.me/sharmag02official" target="_blank">Telegram</a>
 
             </div>
@@ -82,7 +82,7 @@
 
             <div class="box">
                 <h3>Contact Me</h3>
-                <p> <i class="fas fa-envelope"></i>sharmag02official@gmail.com</p>
+                <p> <i class="fas fa-envelope"></i>contact.sharmag02official@gmail.com</p>
                 <a href="https://telegram.me/sharmag02officialbot" target="_blank">Telegram Personal Chat</a>
 
 
